# backend/src/main/java/com/example/panstwamiasta/dto/JoinResponse.java
@@ -5,12 +5,14 @@ import java.util.UUID;
 public class JoinResponse {
     private String code;
     private UUID playerId;
+    private String accessToken;
 
     public JoinResponse() {}
 
-    public JoinResponse(String code, UUID playerId) {
+    public JoinResponse(String code, UUID playerId, String accessToken) {
         this.code = code;
         this.playerId = playerId;
+        this.accessToken = accessToken;
     }
 
     public String getCode() {
@@ -27,5 +29,13 @@ public class JoinResponse {
 
     public void setPlayerId(UUID playerId) {
         this.playerId = playerId;
+    }
+
+    public String getAccessToken() {
+        return accessToken;
+    }
+
+    public void setAccessToken(String accessToken) {
+        this.accessToken = accessToken;
     }
 }
